Fixes and updates to icons

--- a/app/app.css
+++ b/app/app.css
@@ -42,17 +42,17 @@
 
   /* Primary Colors */
   --color-primary-0: #ffffff;
-  --color-primary-10: #f4f3ff;
-  --color-primary-20: #e9e6ff;
-  --color-primary-30: #d4cdff;
-  --color-primary-40: #b8a6ff;
-  --color-primary-50: #9c7eff;
-  --color-primary-60: #8056ff;
-  --color-primary-70: #6a3aff;
-  --color-primary-80: #5423e7;
-  --color-primary-90: #3e17a8;
-  --color-primary-95: #2d0f7a;
-  --color-primary-99: #1a0947;
+  --color-primary-10: #f0f9ff;
+  --color-primary-20: #e0f2fe;
+  --color-primary-30: #bae6fd;
+  --color-primary-40: #7dd3fc;
+  --color-primary-50: #38bdf8;
+  --color-primary-60: #0ea5e9;
+  --color-primary-70: #0284c7;
+  --color-primary-80: #0369a1;
+  --color-primary-90: #075985;
+  --color-primary-95: #0c4a6e;
+  --color-primary-99: #082f49;
   --color-primary-100: #000000;
 
   /* Secondary Colors */
